--- a/front-app/src/index.css
+++ b/front-app/src/index.css
@@ -1,5 +1,34 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+@import '~antd/dist/antd.css';
+body{
+    height: auto;
+    margin: 0px;
+    
 }
+.headder-color{
+    height: 100px;
+    width: auto ;
+    background-color: #0099CC	;
+}
+.content-box-nav{
+    width: 30%;
+    height: 1000px;
+    margin-top: 0px;
+    float: left;
+    background-color: #6699FF;
+    ;
+}
+.content-box-content{
+    width: 70%;
+    height: 1000px;
+    margin-top: 0px;
+    float: left;
+    background-color: #F0F8FF;
+}
+.font-header{
+    font-family: 'Indie Flower', cursive;
+    padding-top: 23px;
+    text-align: center;
+
+}
+
