--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -1,28 +1,35 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Libre+Baskerville|Lobster');
+@import '~antd/dist/antd.css';
+body{
+    margin: 0px;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header-top{
+    width: auto;
+    height: 100px;
+    background-color: black;
 }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.h1-font{
+    margin: 0px;
+    padding-top: 33px;
+    font-family: 'Lobster', cursive;
+    color: white;
+    text-align: center; 
 }
-
-.App-title {
-  font-size: 1.5em;
+.contentAll{
+    padding: 0 50px;
+    margin-top:30px; 
+    margin-bottom:40px;
 }
-
-.App-intro {
-  font-size: large;
+.contentLeft{
+    padding: 24px 0;
+    background: #fff;
 }
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.contentRight{
+    padding: 0 24px;
+    min-height: 280px;
+    background: #fff;
+}
+.MenuBar{
+    width:200;
+    background: #fff;
 }
