--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -8,6 +8,12 @@ body{
     height: 100px;
     background-color: black;
 }
+.footer{
+    width: auto;
+    height: 100px;
+    background-color:gray;
+}
+
 .h1-font{
     margin: 0px;
     padding-top: 33px;
@@ -16,9 +22,12 @@ body{
     text-align: center; 
 }
 .contentAll{
+    height: 72vh;
+    width: 100%;
     padding: 0 50px;
     margin-top:30px; 
     margin-bottom:40px;
+    padding-bottom: 0 10px;
 }
 .contentLeft{
     padding: 24px 0;
