--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -34,7 +34,9 @@ body{
     background: #fff;
 }
 .content-div{
- padding: 24px;
- background: '#fff'; 
- min-Height: 360px;
+    padding: 24px;
+    background: '#fff'; 
+    min-Height: 360px;
+    display: flex;
+    flex-direction: column;
 }
