footer always at bottom

--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -9,8 +9,12 @@ body{
     background-color: black;
 }
 .footer{
-    width: auto;
-    height: 100px;
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
+    padding-bottom:60px;
+    height: calc(100% - 60px);
     background-color:gray;
 }
 
