--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -43,3 +43,8 @@ body{
     display: flex;
     flex-direction: column;
 }
+.date-picker-right {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
