--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -43,3 +43,8 @@ body{
     display: flex;
     flex-direction: column;
 }
+.team-input{
+    width: 500px;
+    margin:  20px 20px 20px;
+    text-align: center;
+  }
