--- a/front-app/src/App.css
+++ b/front-app/src/App.css
@@ -37,8 +37,9 @@ body{
     background: #fff;
 }
 .content-div{
-    padding: 24px;
-    background: '#fff'; 
+    padding: 20px;
+    margin: 10px;
+    background: rgb(184, 178, 178); 
     min-Height: 360px;
     display: flex;
     flex-direction: column;
